k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
spec:
  ingressClassName: traefik  # <-- Esta es la forma moderna de hacerlo
  rules:
  - host: app.orlando.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-app-service
            port:
              number: 80
